# fors33-verifier

./: .gitignore  APP_PLATFORM.md  CHANGELOG.md  Dockerfile  Dockerfile.ci  GITHUB_SEO_CHECKLIST.md  LEGAL_DISCLAIMER.md  LLM_CONTEXT.md  NEXT_STEPS.md  PUBLISH.md  PUBLISH_GUIDE.md  README.md  action.yml  entrypoint.sh  hash_core.py  manifest_core.py  pyproject.toml  requirements-release.txt  server_url_only.py  verify_dpk.py
.github/workflows/: build-push-docker.yml  build-push-fors33-verifier-docker.yml  ci.yml  publish-fors33-verifier.yml  publish-image.yml
fors33_verifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test-data/bad-signature/: payload.txt.f33
test-data/data-drift/: payload.txt
test-data/manifest-compromise/: manifest.json
test-data/valid/: payload.txt.f33
test-data/verifier-0.4.0/: README.md
test-data/verifier-0.4.0/data-drift/: manifest.json
test-data/verifier-0.4.0/keys/: public_key_hex.txt
test-data/verifier-0.4.0/tsa-invalid/: payload.txt.f33
test-data/verifier-0.4.0/tsa-valid/: manifest.json  payload.txt  payload.txt.f33
test-data/verifier-0.4.0/valid/: payload.txt
